--- a/《data-analysis-from-python-with-scratch》/hh.ipynb
+++ b/《data-analysis-from-python-with-scratch》/hh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -14,13 +14,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "??????\n"
+      "Requirement already satisfied: tqdm in d:\\conda\\lib\\site-packages (4.64.0)\n",
+      "Requirement already satisfied: colorama in d:\\conda\\lib\\site-packages (from tqdm) (0.4.4)\n"
      ]
     }
    ],
    "source": [
-    "print('??????')"
+    "!pip install tqdm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  4%|▍         | 3810/100000 [00:25<10:41, 149.84it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Input \u001B[1;32mIn [15]\u001B[0m, in \u001B[0;36m<cell line: 3>\u001B[1;34m()\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m tqdm(\u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m100000\u001B[39m)):\n\u001B[0;32m      4\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m100000\u001B[39m):\n\u001B[1;32m----> 5\u001B[0m         k \u001B[38;5;241m=\u001B[39m \u001B[43mk\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m+\u001B[39;49m\u001B[43m \u001B[49m\u001B[38;5;241;43m1\u001B[39;49m\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "k = 0\n",
+    "for i in tqdm(range(100000)):\n",
+    "    for j in range(100000):\n",
+    "        k = k + 1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
