--- a/my_work/NC/NC_python/altitude_plt.ipynb
+++ b/my_work/NC/NC_python/altitude_plt.ipynb
@@ -13,7 +13,7 @@
     "import numpy as np\n",
     "import xarray as xr\n",
     "import pandas as pd\n",
-    "import pandas as pd\n",
+    "# import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
